GNOME Bugzilla – Bug 730526
Fix the edit-clear icons in RTL
Last modified: 2014-05-21 18:09:46 UTC
See the patch.
Created attachment 276937 [details] [review] Use the new support for RTL icons in GtkIconTheme
Review of attachment 276937 [details] [review]: sure
Review of attachment 276937 [details] [review]: Pushed as c543a14 - Use the new support for RTL icons in GtkIconTheme
Created attachment 276938 [details] [review] inspector: Use the new support for RTL icons in GtkIconTheme Sorry, I run greop on gtk/*.c only, forget gtk/inspector/*.c
Review of attachment 276938 [details] [review]: ok
Review of attachment 276938 [details] [review]: Pushed as 02d92ff - inspector: Use the new support for RTL icons in GtkIconTheme