Use the new support for RTL icons in GtkIconTheme

https://bugzilla.gnome.org/show_bug.cgi?id=730526